Do js_dom_manipulation ex1

--- a/exercises/js_dom_manipulation/ex1/ex1.html
+++ b/exercises/js_dom_manipulation/ex1/ex1.html
@@ -28,6 +28,6 @@
         </div>
 
         <!-- Link js here-->
-        <script src=""></script>
+        <script src="ex1.js"></script>
     </body>
 </html>
