--- a/exercises/js_dom_manipulation/ex2/ex2.html
+++ b/exercises/js_dom_manipulation/ex2/ex2.html
@@ -16,9 +16,10 @@
             Put text here
         </div>
         <div id="button-row">
-            <button>Load Text 1</button>
-            <button>Load Text 2</button>
-            <button">Load Text 3</button>
+            <button onmouseleave="changeToText(1);">Load Text 1</button>
+            <button onmouseleave="changeToText(2);">Load Text 2</button>
+            <button onmouseleave="changeToText(3);">Load Text 3</button>
+            <button onmouseleave="changeToText(Math.floor(Math.random() * 3) + 1);">Load Random Text</button>
         </div>
 
         <div id="text1" style="display: none;">
